k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: qracun
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qracun
      tier: frontend
  template:
    metadata:
      labels:
        app: qracun
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: ${NAME_IMAGE_FRONTEND}
          ports:
            - containerPort: 80
