k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qracun-ingress
  annotations:
    # Cert-Manager: указываем какой ClusterIssuer использовать
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

    # NGINX: автоматический редирект с HTTP на HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    # Безопасность: HSTS — браузер всегда будет использовать HTTPS
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: qracun.me
      http:
        paths:
          # API backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80

          # pgAdmin backend
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80

          # Frontend (Vue + nginx)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - qracun.me
      secretName: qracun-tls
